# looki-mcp

./: .env.example  .gitignore  CHANGES.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  journals_api_findings.md  main.py  pyproject.toml  requirements.txt
docs/narrative/: 2026-06-21-journals-api-and-media-capture.md  2026-06-21-shipping-and-the-drifted-checkout.md
docs/superpowers/plans/: 2026-06-24-insight-core.md
docs/superpowers/specs/: 2026-06-24-looki-magic-composite-tools-design.md
looki_mcp/: client.py  config.py  middleware.py  models.py  server.py  setup_wizard.py  storage.py
looki_mcp/insight/: cache.py  envelope.py  governor.py  llm.py  scan.py
looki_mcp/tools/: convenience.py  highlights.py  journals.py  moments.py  profile.py  realtime.py  video.py
scripts/: download_logo.py  integration_test.py  smoke_test.py  test_all_tools.py  test_cache.py  test_envelope.py  test_governed_get.py  test_governor.py  test_insight_llm.py  test_journals_helpers.py  test_realtime_describe.py  test_scan.py  test_storage_helpers.py  test_storage_media_key.py
systemd/: looki-mcp.service
