[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looki-mcp"
version = "1.0.0"
description = "MCP server for the Looki wearable camera API — access your memories, moments, and highlights"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "looki", "wearable", "camera", "memories", "model-context-protocol"]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langfuse>=2.50.0",
]

[project.scripts]
looki-mcp = "main:run"

[tool.hatch.build.targets.wheel]
packages = ["looki_mcp"]
